# strategyClient

./: .gitignore  CMakeLists.txt  StrategyClient.cpp  backup.tar.bz2  strategyClient.pro  strategyClient.sln  strategyClient.vcxproj  strategyclient_global.h
proto/: CMakeLists.txt  common_constants.cpp  common_constants.h  common_types.cpp  common_types.h  get_constants.cpp  get_constants.h  get_types.cpp  get_types.h
src/: CMakeLists.txt  StrategyClient.cpp  StrategyClient.h
strategyServer/: CMakeLists.txt  ReadMe.txt  stdafx.cpp  strategyServer.cpp  strategyServer.vcxproj
test/: CMakeLists.txt  main.cpp  test.pro  test.vcxproj
