cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

INCLUDE(CollectSrcs)
SET(TARGET strategyClient)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../webquant)
LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})

ADD_SUBDIRECTORY(proto)
SET(${TARGET}_SUBDIRS . proto)

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_LIBRARY(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} network)
TARGET_LINK_LIBRARIES(${TARGET} wcrypto)
TARGET_LINK_LIBRARIES(${TARGET} common)

INSTALL(TARGETS ${TARGET}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

ADD_SUBDIRECTORY(test)

