INCLUDE(CollectSrcs)
SET(TARGET proto)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../webquant)
LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})

SET(${TARGET}_SUBDIRS )

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_LIBRARY(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGETS} thrift)


INSTALL(TARGETS ${TARGET}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

