INCLUDE(CollectSrcs)
SET(TARGET strategyClient)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../webquant)
LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})

SET(${TARGET}_SUBDIRS )

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_LIBRARY(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} proto)
TARGET_LINK_LIBRARIES(${TARGET} network)
TARGET_LINK_LIBRARIES(${TARGET} wcrypto)
TARGET_LINK_LIBRARIES(${TARGET} common)

INSTALL(TARGETS ${TARGET}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

