SET(TARGET strategyClientTest)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE_PATH})
LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})

SET(${TARGET}_SUBDIRS )

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})

TARGET_LINK_LIBRARIES(${TARGET} strategyClient)


INSTALL(TARGETS ${TARGET}
    RUNTIME DESTINATION bin)

